Reformatted all classes to comply with our style template